did courses section

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,8 @@
             <span class = "localLink"><a href = "projects.html" title = "See my software projects"> Projects </a></span>
             <span class = "localLink"><a href = "blog.html" title = "My blog"> Blog </a></span>
         </header>
-
+        <div class = "TextHeader">
+            <h1> Blog (COMING SOON?) </h1>
+        </div>
     </body>
 </html>
