--- a/courses.html
+++ b/courses.html
@@ -13,6 +13,61 @@
             <span class = "localLink"><a href = "projects.html" title = "See my software projects"> Projects </a></span>
             <span class = "localLink"><a href = "blog.html" title = "My blog"> Blog </a></span>
         </header>
-
+        <div class = "TextHeader">
+            <h1> My courses</h1>
+        </div>
+        <div class = "CourseMainBody">
+            <div class = "Termbox"> 
+                <div class = "Termheader"> <h1>20T2</h1> </div>
+                <div class = "CourseHeader"> <h2> COMP9417: Machine Learning and Data Mining </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: I actually wanted to take COMP2041 in 20T2, but since the course was full with a long waiting list, I found myself taking this postgraduate level course instead.</div>
+                <div class = "CourseHeader"> <h2> COMP3141: Software Sysdem Design and Implementation </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: </div>
+                <div class = "CourseHeader"> <h2> MATH2859: Probability, Statistics, and Information </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: </div>
+                <div class = "CourseHeader"> <h2> MATH2400: Finite Mathematics </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: </div>
+            </div>
+            <div class = "Termbox"> 
+                <div class = "Termheader"> <h1>20T1</h1> </div>
+                <div> Note: all classes were moved online due to COVID-19 in this term.</div>
+                <div class = "CourseHeader"> <h2> COMP2521: Data Structures and Algorithms </h2></div>
+                <div class = "Courseinfo"> Mark achieved: SY <br> Comments: The COVID adjusted SY/FL system caused the course to lose a lot of the tension spurred by the desire to get very high marks. Otherwise, I found the course content very good, though the delivery was somewhat mediocre.</div>
+                <div class = "CourseHeader"> <h2> SENG2021: Requirements and Design Workshop </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: A much better group project experience than ENGG1000 as we were allowed to form our own groups. Overall, the project we produced was a bit too ambitious and the course took a lot of work. After finishing the project, however, I feel somewhat satisfied. <br>
+                                            We were shortlisted for the Macquarie Software Engineering prize for this project.</div>
+                <div class = "CourseHeader"> <h2> FINS1613: Business Finance </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: Pretty fundamental finance course with good content. I did very well up to the final exam (95+), but dramatically underprepared for the final since the online format took the pre-exam tension away from me. I have a lot of regrets from not preparing for the final enough for this course, considering it wasn't difficult, and I could've done very well.</div>
+            </div>
+            <div class = "Termbox"> 
+                <div class = "Termheader"> <h1>19T3</h1> </div>
+                <div class = "CourseHeader"> <h2> COMP1521: Computer Systems Fundamentals </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 88<br> Comments: Good interesting course. Assembler was interesting, but I would prefer to not touch it again.</div>
+                <div class = "CourseHeader"> <h2> COMP1531: Software Engineering Fundamentals </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 83<br> Comments: I got almost full marks (95+) in all of the coding components, and did badly in the theory section in the final exam, but I can't find out why since I sat the supplementary so I can't review my exam.</div>
+                <div class = "CourseHeader"> <h2> ENGG1000: Introduction to Engineering Design and Innovation </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 79<br> Comments: The high weighting of marks toward documentation and group presentations in a randomly assigned group takes marks away from actual engineering design and innovation, making the course difficult to work with in many scenarios. <br> 
+                                        In my case, a group member dropped out and wasn't replaced, and it made the course harder. This is my least favorite course so far.</div>
+            </div>
+            <div class = "Termbox"> 
+                <div class = "Termheader"> <h1>19T2</h1> </div>
+                <div class = "CourseHeader"> <h2> ECON1101: Micronomics 1 </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 93<br> Comments: Introductory Economics content, pretty simple and similar to HSC content. Course pace was a bit slow.</div>
+                <div class = "CourseHeader"> <h2> MATH1241: Higher Mathematics 1B </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 86 <br> Comments: Good extension of 1141 content. Slightly more difficult as a course.</div>
+                <div class = "CourseHeader"> <h2> MATH1081: Discrete Mathematics </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 86<br> Comments: Good, interesting course with a good amount of online resources available on moodle to help. Not too difficult.</div>
+            </div>
+            <div class = "Termbox"> 
+                <div class = "Termheader"> <h1>19T1</h1> </div>
+                <div class = "CourseHeader"> <h2> COMP1511: Programming Fundamentals </h2></div>
+                <div class = "Courseinfo"> Mark achieved: <br> Comments: Good course, Andrew Taylor style final exam makes it diffucult to get very high marks.</div>
+                <div class = "CourseHeader"> <h2> MATH1141: Higher Mathematics 1A </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 88 <br> Comments: Relatively straightforward but interesting course.</div>
+                <div class = "CourseHeader"> <h2> ACCT1501: Accounting and financial management </h2></div>
+                <div class = "Courseinfo"> Mark achieved: 83 <br> Comments: Underprepared for final exam </div>
+            </div>
+            
+        </div>
     </body>
 </html>
