fixed a problem with html

--- a/courses.html
+++ b/courses.html
@@ -61,11 +61,11 @@
             <div class = "Termbox"> 
                 <div class = "Termheader"> <h1>19T1</h1> </div>
                 <div class = "CourseHeader"> <h2> COMP1511: Programming Fundamentals </h2></div>
-                <div class = "Courseinfo"> Mark achieved: <br> Comments: Good course, Andrew Taylor style final exam makes it diffucult to get very high marks.</div>
+                <div class = "Courseinfo"> Mark achieved: 85 <br> Comments: Good course, Andrew Taylor style final exam makes it diffucult to get very high marks.</div>
                 <div class = "CourseHeader"> <h2> MATH1141: Higher Mathematics 1A </h2></div>
                 <div class = "Courseinfo"> Mark achieved: 88 <br> Comments: Relatively straightforward but interesting course.</div>
                 <div class = "CourseHeader"> <h2> ACCT1501: Accounting and financial management </h2></div>
-                <div class = "Courseinfo"> Mark achieved: 83 <br> Comments: Underprepared for final exam </div>
+                <div class = "Courseinfo"> Mark achieved: 83 <br> Comments: Straightforward content. Lost 5 marks for filling in multiple choice incorrectly in midterm. Underprepared for final exam </div>
             </div>
             
         </div>
