--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <span class = "localLink"><a href = "courses.html" title = "See my completed courses"> Courses </a></span>
             <span class = "localLink"><a href = "projects.html" title = "See my software projects"> Projects </a></span>
             <span class = "localLink"><a href = "blog.html" title = "My blog"> Blog </a></span>
+            <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
         </header>
         <div class = "MainInfo">
             <div id = "Name"><h1> Sean Morota Chu</h1> </div>  
