--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,12 @@
             <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
         </header>
         <div class = "TextHeader">
-            <h1> My projects (COMING SOON) </h1>
+            <h1> My projects </h1>
+        </div>
+        <div class = "ProjectList">
+            <ul>
+                <li> <a href = "projects/RPS/rps.html"> Rock Paper Scissors </a> </li>
+            </ul>
         </div>
     </body>
 </html>
