--- a/courses.html
+++ b/courses.html
@@ -35,10 +35,10 @@
                 <div class = "CourseHeader"> <h2> COMP2521: Data Structures and Algorithms </h2></div>
                 <div class = "Courseinfo"> Mark achieved: SY <br> Comments: The COVID adjusted SY/FL system caused the course to lose a lot of the tension spurred by the desire to get very high marks. Otherwise, I found the course content very good, though the delivery was somewhat mediocre.</div>
                 <div class = "CourseHeader"> <h2> SENG2021: Requirements and Design Workshop </h2></div>
-                <div class = "Courseinfo"> Mark achieved: <br> Comments: A much better group project experience than ENGG1000 as we were allowed to form our own groups. Overall, the project we produced was a bit too ambitious and the course took a lot of work. After finishing the project, however, I feel somewhat satisfied. <br>
+                <div class = "Courseinfo"> Mark achieved:92 <br> Comments: A much better group project experience than ENGG1000 as we were allowed to form our own groups. Overall, the project we produced was a bit too ambitious and the course took a lot of work. After finishing the project, however, I feel somewhat satisfied. <br>
                                             We were shortlisted for the Macquarie Software Engineering prize for this project.</div>
                 <div class = "CourseHeader"> <h2> FINS1613: Business Finance </h2></div>
-                <div class = "Courseinfo"> Mark achieved: <br> Comments: Pretty fundamental finance course with good content. I did very well up to the final exam (95+), but dramatically underprepared for the final since the online format took the pre-exam tension away from me. I have a lot of regrets from not preparing for the final enough for this course, considering it wasn't difficult, and I could've done very well.</div>
+                <div class = "Courseinfo"> Mark achieved:79 <br> Comments: Pretty fundamental finance course with good content. I did very well up to the final exam (95+), but dramatically underprepared for the final since the online format took the pre-exam tension away from me. I have a lot of regrets from not preparing for the final enough for this course, considering it wasn't difficult, and I could've done very well.</div>
             </div>
             <div class = "Termbox"> 
                 <div class = "Termheader"> <h1>19T3</h1> </div>
