--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,21 @@
             <h1> My projects </h1>
         </div>
         <div class = "ProjectList">
+            <h3> Vanilla JS </h3>
             <ul>
                 <li> <a href = "projects/RPS/rps.html"> Rock Paper Scissors </a> </li>
+                <ul>
+                    <li> Written 21/05/2020 </li>
+                    <li> First practice with JavaScript </li>
+                    <li> Still looks a little janky.</li>
+                </ul>
+                <li> <a href = "projects/Snake/snake.html"> Snake game </a> </li>
+                <ul>
+                    <li> Written 21/05/2020 </li>
+                    <li> Second practice with JaveScript </li>
+                    <li> First time using animated movement in JS</li>
+                </ul>
+                     
             </ul>
         </div>
     </body>
