--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sean's Homepage </title>
+        <title> Sean's projects </title>
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
