--- a/projects/Snake/snake.html
+++ b/projects/Snake/snake.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sean's Homepage </title>
+        <title> Sean's snake game </title>
         <link rel = "stylesheet" href = "snake.css">
     </head>
     <body>
