Update rps title

--- a/projects/RPS/rps.html
+++ b/projects/RPS/rps.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sean's Homepage </title>
+        <title> Rock Paper Scissors </title>
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
