--- a/projects.html
+++ b/projects.html
@@ -17,23 +17,81 @@
         <div class = "TextHeader">
             <h1> My projects </h1>
         </div>
-        <div class = "ProjectList">
-            <h3> Vanilla JS </h3>
-            <ul>
-                <li> <a href = "projects/RPS/rps.html"> Rock Paper Scissors </a> </li>
-                <ul>
-                    <li> Written 21/05/2020 </li>
-                    <li> First practice with JavaScript </li>
-                    <li> Still looks a little janky.</li>
-                </ul>
-                <li> <a href = "projects/Snake/snake.html"> Snake game </a> </li>
-                <ul>
-                    <li> Written 21/05/2020 </li>
-                    <li> Second practice with JaveScript </li>
-                    <li> First time using animated movement in JS</li>
-                </ul>
-                     
-            </ul>
+        <div class = "all_projects">
+            <div class = "project_type">
+                <u><h2> Non course related projects </h2></u>
+                <div class = "ProjectList">
+                    <h3> Vanilla JS </h3>
+                    <div class = "Subject_projects">
+                        <div class = "project">
+                            <a href = "projects/RPS/rps.html"> Rock Paper Scissors </a>
+                            <div class = "project_details">
+                                Written 21/05/2020 <br>
+                                First practice with JavaScript <br>
+                                Still looks a little janky. <br>
+                            </div>
+                        </div>
+                        <div class = "project">
+                            <a href = "projects/Snake/snake.html"> Snake game </a> 
+                            <div class = "project_details">
+                                Written 21/05/2020 <br>
+                                Second practice with JaveScript <br> 
+                                First time using animated movement in JS <br>
+                            </div>
+                        </div>
+                    </div>
+                    <h3> Angular JS </h3>
+                    <div class = "Subject_projects">
+
+                    </div>
+                    <h3> Haskell </h3>
+                    <div class = "Subject_projects">
+
+                    </div>
+
+                    <h3> Machine Learning & Data Mining </h3>
+                    <div class = "Subject_projects">
+                    </div>
+                </div>
+            </div>
+            <div class = "project_type">
+                <u><h2> Course related projects </h2></u>
+                <div class = "ProjectList">
+                    <h3> COMP2521: Data Structures and Algorithms </h3>
+                    <div class = "Subject_projects">
+                        <div class = "project">
+                            <a href = "https://github.com/seanmchu/COMP2521-ass1"> Assignment 1 :Information retreival </a>
+                            <div class = "project_details">
+                                Written early 2020 <br>
+                                Uses an inverted index binary search tree (IIBST) to maintain a search engine using TfIdf weightings.<br>
+                            </div>
+                        </div>
+                        <div class = "project">
+                            <a href = "https://github.com/seanmchu/COMP2521-ass2"> Assignment 2: simple search engine </a>
+                            <div class=  "project_details">
+                                Written early 2020 <br>
+                                Uses a directed graph ADT to store page names and links between pages <br>
+                                Weights pages based on the weighted pagerank algorithm <br>
+                                Also serves as a hybrid/meta search engine with rank aggregation with based on scaled-footrule distance<br>
+                                Meta hybrid engine optimised with the Hungarian bipartite matching algorithm.<br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "ProjectList">
+                    <h3> COMP1511: Programming fundamentals and COMP1521:Computer Systems Fundamentals </h3>
+                    <div class = "Subject_projects">
+                        <a href = "https://github.com/seanmchu/Old_projects"> All projects </a>
+                        <div class = "project_details">
+                            Written in 2019<br>
+                            1511 ass1-coco: plays a card game called coco (first assignment)<br>
+                            1511 ass2-pokedex: uses structs to implement a pokedex with add/remove/evole functionality<br>
+                            1521 ass1-emu: A MIPS assembler emulator built in C <br>
+                            1521 ass2-cowrie: A shell written in C <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
