update style, website is till bad :(

--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
     <body>
         <header>
             <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "about.html" title = "View a summary and short CV"> About me </a> </span>
-            <span class = "localLink"><a href = "courses.html" title = "See my completed courses"> Courses </a></span>
-            <span class = "localLink"><a href = "projects.html" title = "See my software projects"> Projects </a></span>
-            <span class = "localLink"><a href = "blog.html" title = "My blog"> Blog </a></span>
+            <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+            <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
+            <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
+            <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
             <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
         </header>
         <div class = "Maintext">
@@ -20,14 +20,14 @@
             </div>
             <div class = "TextParagraph">
                 <p>
-                    <img id = "fatman" src = "src/Thefatman.jpg" alt = "Sean">
-                    I am a software engineering and commerce student at UNSW, due to graduate at the end of 2023 with a Weighted Average Mark (WAM) of 85.545. <br>
-                    I'm also currently a member of the Australian Junior National Team for Fencing, where I represent the country in various international events. <br>
-                    Outside of my academic and sporting commitments, I work as a PASS Economics tutor for the UNSW business school and as a Fencing coach at Sydney Boys High School.<br>
-                    I also participate in campus life through my role as events director in the UNSW Mahjong society, where I manage a team to organise recreational events on and off campus.<br>
-                    My technical skills include: C, C++, Python, HTML, CSS, JavaScript, Git, LaTeX, and Microsoft Office.<br>
-                    Outside of these commitments, my hobbies include competitive programming, reading, going to the gym, and playing video games. <br>
-                    A copy of my resume can be downloaded here: <a href = "src/sean_resume.pdf" download = "Sean's resume"> Download  </a> 
+                    <img class = "right_image" src = "src/dogpill.jpg" alt = "Sean">
+                    Name: Sean Morota Chu <br> <br>
+                    University: UNSW Sydney <br><br>
+                    WAM: HD (86) <br> <br>
+                    Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor <br><br>
+                    Other commitments: Australian national U20 fencing team <br><br>
+                    Skills: C, C++, Python, HTML, CSS, JS, MATLAB, LaTeX. <br><br> <br>
+                    Resume: <a href = "src/sean_resume.pdf" download = "Sean's resume"> Download  </a> <br><br>
                 </p>
             </div>
         </div>
