--- a/projects.html
+++ b/projects.html
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sean's projects </title>
+        <title> Projects </title>
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
         <header>
             <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "about.html" title = "View a summary and short CV"> About me </a> </span>
-            <span class = "localLink"><a href = "courses.html" title = "See my completed courses"> Courses </a></span>
-            <span class = "localLink"><a href = "projects.html" title = "See my software projects"> Projects </a></span>
-            <span class = "localLink"><a href = "blog.html" title = "My blog"> Blog </a></span>
+            <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+            <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
+            <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
+            <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
             <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
         </header>
         <div class = "TextHeader">
@@ -40,18 +40,6 @@
                             </div>
                         </div>
                     </div>
-                    <h3> Angular JS </h3>
-                    <div class = "Subject_projects">
-
-                    </div>
-                    <h3> Haskell </h3>
-                    <div class = "Subject_projects">
-
-                    </div>
-
-                    <h3> Machine Learning & Data Mining </h3>
-                    <div class = "Subject_projects">
-                    </div>
                 </div>
             </div>
             <div class = "project_type">
@@ -79,7 +67,7 @@
                     </div>
                 </div>
                 <div class = "ProjectList">
-                    <h3> COMP1511: Programming fundamentals and COMP1521:Computer Systems Fundamentals </h3>
+                    <h3> COMP1511: Programming fundamentals & COMP1521:Computer Systems Fundamentals </h3>
                     <div class = "Subject_projects">
                         <a href = "https://github.com/seanmchu/Old_projects"> All projects </a>
                         <div class = "project_details">
