--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sean's Homepage </title>
+        <title> Home </title>
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
         <header>
             <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "about.html" title = "View a summary and short CV"> About me </a> </span>
-            <span class = "localLink"><a href = "courses.html" title = "See my completed courses"> Courses </a></span>
-            <span class = "localLink"><a href = "projects.html" title = "See my software projects"> Projects </a></span>
-            <span class = "localLink"><a href = "blog.html" title = "My blog"> Blog </a></span>
+            <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+            <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
+            <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
+            <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
             <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
         </header>
         <div class = "MainInfo">
             <div id = "Name"><h1> Sean Morota Chu</h1> </div>  
-            <div id = "Occupation"><h2> UNSW Finance and software engineering student </h2></div> 
+            <div id = "Occupation"><h2> UNSW Finance and Software Engineering student </h2></div> 
         </div>
     </body>
 </html>
