--- a/projects/Snake/snake.html
+++ b/projects/Snake/snake.html
@@ -8,10 +8,10 @@
     <body>
         <header>
             <span class = "localLink"><a href = "../../index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "../../about.html" title = "View a summary and short CV"> About me </a> </span>
-            <span class = "localLink"><a href = "../../courses.html" title = "See my completed courses"> Courses </a></span>
-            <span class = "localLink"><a href = "../../projects.html" title = "See my software projects"> Projects </a></span>
-            <span class = "localLink"><a href = "../../blog.html" title = "My blog"> Blog </a></span>
+            <span class = "localLink"><a href = "../../about.html" title = "🙈️"> About me </a> </span>
+            <span class = "localLink"><a href = "../../courses.html" title = "🏫️"> Courses </a></span>
+            <span class = "localLink"><a href = "../../projects.html" title = "🤓️"> Projects </a></span>
+            <span class = "localLink"><a href = "../../quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
             <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
         </header>
         <div class = "TextHeader">
