refactored large parts of code, removed signed-7bit-asciiesque circular style sheet imports on projects

--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
     </head>
     <body>
         <header>
-            <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
-            <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
-            <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
-            <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
-            <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+            <ul id = "header-list">
+                <li>
+                    <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+                </li>
+            </ul>
         </header>
+        <div>
+            <audio controls autoplay loop style = "position: relative; left: 50%; top: 880px; transform: translate(-50%,-50%);">
+                <source src="src/Chinggis.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio> 
         <div class = "MainInfo">
             <div id = "Name"><h1> Sean Morota Chu</h1> </div>  
             <div id = "Occupation"><h2> UNSW Finance and Software Engineering student </h2></div> 
