--- a/projects/Snake/snake.html
+++ b/projects/Snake/snake.html
@@ -4,15 +4,30 @@
     <head>
         <title> Sean's snake game </title>
         <link rel = "stylesheet" href = "snake.css">
+        <link rel = "stylesheet" href = "../../styles.css">
     </head>
     <body>
         <header>
-            <span class = "localLink"><a href = "../../index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "../../about.html" title = "🙈️"> About me </a> </span>
-            <span class = "localLink"><a href = "../../courses.html" title = "🏫️"> Courses </a></span>
-            <span class = "localLink"><a href = "../../projects.html" title = "🤓️"> Projects </a></span>
-            <span class = "localLink"><a href = "../../quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
-            <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+            <ul id = "header-list">
+                <li>
+                    <span class = "localLink"><a href = "../../index.html" title = "Return to the main page"> Main </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "../../about.html" title = "🙈️"> About me </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "../../courses.html" title = "🏫️"> Courses </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "../../projects.html" title = "🤓️"> Projects </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "../../quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+                </li>
+            </ul>
         </header>
         <div class = "TextHeader">
             <h1> Snake game</h1>
