--- a/about.html
+++ b/about.html
@@ -7,20 +7,35 @@
     </head>
     <body>
         <header>
-            <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
-            <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
-            <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
-            <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
-            <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+            <ul id = "header-list">
+                <li>
+                    <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+                </li>
+            </ul>
         </header>
-        <div class = "Maintext">
+        <div class = "MainBody">
             <div class = "TextHeader">
-                <h1> About me </h1>
+                <h1> <u> About me </u> </h1>
             </div>
-            <div class = "TextParagraph">
+            <div class=  "about">
                 <p>
-                    <img class = "right_image" src = "src/dogpill.jpg" alt = "Sean">
+                    <img class = "middle_image" src = "src/dogpill.jpg" alt = "Sean">
+                    <br>
                     Name: Sean Morota Chu <br> <br>
                     University: UNSW Sydney <br><br>
                     WAM: HD (86) <br> <br>
