--- a/quotes.html
+++ b/quotes.html
@@ -7,17 +7,32 @@
     </head>
     <body>
         <header>
-            <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
-            <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
-            <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
-            <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
-            <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
-            <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+            <ul id = "header-list">
+                <li>
+                    <span class = "localLink"><a href = "index.html" title = "Return to the main page"> Main </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "about.html" title = "🙈️"> About me </a> </span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "courses.html" title = "🏫️"> Courses </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
+                </li>
+                <li>
+                    <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
+                </li>
+            </ul>
         </header>
-        <div class = "TextHeader">
-            <h1>🧠️ Profundity 🧠️</h1>
-        </div>
-        <div class = "TextParagraph">
+        <div class = "MainBody">
+            <div class = "TextHeader">
+                <h1>🧠️ Profundity 🧠️</h1>
+            </div>
+
             <p>
                 <img class = "right_image" id = "dong_dog" src = "src/dong.jpg" alt = "dogg">
                 <div class = "quote"> 
