added email link

--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
                     Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor <br><br>
                     Other commitments: Australian national U20 fencing team <br><br>
                     Skills: C, C++, Python, HTML, CSS, JS, MATLAB, LaTeX. <br><br> <br>
+                    Contact me: <a href = "mailto:seanmorotachu@gmail.com"> Gmail </a> <br><br>
                     Resume: <a href = "src/sean_resume.pdf" download = "Sean's resume"> Download  </a> <br><br>
                 </p>
             </div>
