--- a/null.html
+++ b/null.html
@@ -30,21 +30,9 @@
         </header>
         <div class = "MainBody">
             <div class = "TextHeader">
-                <h1> <u> About me </u> </h1>
+                <h1> <u> COMING SOON! </u> </h1>
             </div>
-            <div class=  "about">
-                <p>
-                    <img class = "middle_image" src = "src/dogpill.jpg" alt = "Sean">
-                    <br>
-                    Name: Sean Morota Chu <br> <br>
-                    University: UNSW Sydney <br><br>
-                    WAM: HD (86) <br> <br>
-                    Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor <br><br>
-                    Other commitments: Australian national U20 fencing team <br><br>
-                    Skills: C, C++, Python, HTML, CSS, JS, MATLAB, LaTeX. <br><br> <br>
-                    Resume: <a href = "src/sean_resume.pdf" download = "Sean's resume"> Download  </a> <br><br>
-                </p>
-            </div>
+            
         </div>
     </body>
 </html>
