--- a/quotes.html
+++ b/quotes.html
@@ -21,7 +21,7 @@
                     <span class = "localLink"><a href = "projects.html" title = "🤓️"> Projects </a></span>
                 </li>
                 <li>
-                    <span class = "localLink"><a href = "quotes.html" title = "🦍️ Inspiration 🦍️"> Quotes </a></span>
+                    <span class = "localLink"><a href = "misc.html" title = "🦍️ Vault of knowledge 🦍️"> Archives </a></span>
                 </li>
                 <li>
                     <span class = "localLink"><a href = https://github.com/seanmchu title = "Github"> Github </a></span>
