--- a/misc.html
+++ b/misc.html
@@ -60,7 +60,7 @@
                 <img class = "buttonImage" src = "src/chimpp.jpg">
                 <div class = "boxLeft"> <b> Music </b> </div>
                 <div class = "boxUnder">
-                    <p><i> Humankind's greatest compositions</i></p>
+                    <p><i> Humanity's greatest compositions</i></p>
                 </div>
             </div>
             <div class = "buttonBox2" onclick = "location.href = 'null.html'">
