--- a/misc.html
+++ b/misc.html
@@ -32,7 +32,7 @@
             <div class = "TextHeader" style = "font-size:55px"> <b> <u>Archives</b></u> </div>
             <div class = "TextHeader" style = "font-size:36px; padding-top:10px"> <u>Literary arts</u></div>
             <div class = "subHeader"> Explore the grand lexicon. </div>
-            <div class = "buttonBox" onclick = "location.href = 'quotes.html'"> 
+            <div class = "buttonBox" onclick = "location.href = 'Archives/quotes.html'"> 
                 <img class = "buttonImage" src = "src/Cade.jpg">
                 <div class = "boxLeft"> <b>Quotes</b> </div>
                 <br>
@@ -56,7 +56,7 @@
             </div>
             <div class = "TextHeader" style = "font-size:36px; padding-top:10px"> <u>Media</u></div>
             <div class = "subHeader"> Cultivate the soul. </div>
-            <div class = "buttonBox" onclick = "location.href = 'null.html'">
+            <div class = "buttonBox" onclick = "location.href = 'Archives/music.html'">
                 <img class = "buttonImage" src = "src/chimpp.jpg">
                 <div class = "boxLeft"> <b> Music </b> </div>
                 <div class = "boxUnder">
