removed redundant projects from page

--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,8 @@
                 <h1> <u> My projects </u> </h1>
             </div>
             <div class = "project_type">
-                <u><h2> Non course related projects </h2></u>
+                <u><h2> JS Games </h2></u>
                 <div class = "ProjectList">
-                    <h3> Vanilla JS </h3>
                     <div class = "Subject_projects">
                         <div class = "project">
                             <a href = "projects/RPS/rps.html"> Rock Paper Scissors </a>
@@ -57,47 +56,11 @@
                             </div>
                         </div>
                     </div>
+                    <br><br>
+                    <u> Other projects are on Github </u>
                 </div>
             </div>
             
-            <div class = "project_type">
-                <u><h2> Course related projects </h2></u>
-                <div class = "ProjectList">
-                    <h3> COMP2521: Data Structures and Algorithms </h3>
-                    <div class = "Subject_projects">
-                        <div class = "project">
-                            <a href = "https://github.com/seanmchu/COMP2521-ass1"> Assignment 1 :Information retreival </a>
-                            <div class = "project_details">
-                                Written early 2020 <br>
-                                Uses an inverted index binary search tree (IIBST) to maintain a search engine using TfIdf weightings.<br>
-                            </div>
-                        </div>
-                        <div class = "project">
-                            <a href = "https://github.com/seanmchu/COMP2521-ass2"> Assignment 2: simple search engine </a>
-                            <div class=  "project_details">
-                                Written early 2020 <br>
-                                Uses a directed graph ADT to store page names and links between pages <br>
-                                Weights pages based on the weighted pagerank algorithm <br>
-                                Also serves as a hybrid/meta search engine with rank aggregation with based on scaled-footrule distance<br>
-                                Meta hybrid engine optimised with the Hungarian bipartite matching algorithm.<br>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class = "ProjectList">
-                    <h3> COMP1511: Programming fundamentals & COMP1521:Computer Systems Fundamentals </h3>
-                    <div class = "Subject_projects">
-                        <a href = "https://github.com/seanmchu/Old_projects"> All projects </a>
-                        <div class = "project_details">
-                            Written in 2019<br>
-                            1511 ass1-coco: plays a card game called coco (first assignment)<br>
-                            1511 ass2-pokedex: uses structs to implement a pokedex with add/remove/evole functionality<br>
-                            1521 ass1-emu: A MIPS assembler emulator built in C <br>
-                            1521 ass2-cowrie: A shell written in C <br>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </body>
 </html>
