precautionary message for snake game

--- a/projects/Snake/snake.html
+++ b/projects/Snake/snake.html
@@ -32,6 +32,9 @@
         <div class = "TextHeader">
             <h1> Snake game</h1>
         </div>
+        <div class = "subHeader" style = "text-align:center;margin-top:-20px;margin-bottom:60px;">
+            <i> zoom out to stop screen from moving </i> 
+        </div>
         <div class = "speeds">
         <div id = "start" class = "button"> <u> Start </u> </div>
         </div>
