--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     <br>
                     Name: Sean Morota Chu <br> <br>
                     University: UNSW Sydney <br><br>
-                    WAM: HD (86) <br> <br>
+                    WAM: HD (85+) <br> <br>
                     Current jobs: UNSW Economics PASS tutor, SBHS Fencing instructor <br><br>
                     Other commitments: Australian national U20 fencing team <br><br>
                     Skills: C, C++, Python, HTML, CSS, JS, MATLAB, LaTeX. <br><br> <br>
