manga + small fixes

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     Other commitments: Australian national U20 fencing team <br><br>
                     Skills: C, C++, Python, HTML, CSS, JS, MATLAB, LaTeX. <br><br> <br>
                     Contact me: <a href = "mailto:seanmorotachu@gmail.com"> Gmail </a> <br><br>
-                    Resume: <a href = "src/sean_resume.pdf" download = "Sean's resume"> Download  </a> <br><br>
+                    Resume: <a href = "../../../../Documents/normal_resume.pdf" download = "Sean's resume"> Download  </a> <br><br>
                 </p>
             </div>
         </div>
