--- a/misc.html
+++ b/misc.html
@@ -47,7 +47,7 @@
                     <p><i> Ancient knowledge </i></p>
                 </div>
             </div>
-            <div class = "buttonBox3" onclick = "location.href = 'null.html'">
+            <div class = "buttonBox3" onclick = "location.href = 'Archives/manga.html'">
                 <img class = "buttonImage" src = "src/sandog.jpg">
                 <div class = "boxLeft"> <b> Manga </b> </div>
                 <div class = "boxUnder">
