--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             </ul>
         </header>
         <div>
-            <audio controls autoplay loop style = "position: relative; left: 50%; top: 880px; transform: translate(-50%,-50%);">
-                <source src="src/Chinggis.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio> 
+            
         <div class = "MainInfo">
             <div id = "Name"><h1> Sean Morota Chu</h1> </div>  
             <div id = "Occupation"><h2> UNSW Finance and Software Engineering student </h2></div> 
+            <audio controls autoplay loop ">
+                <source src="src/Chinggis.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio> 
         </div>
     </body>
 </html>
