Filled in all the archives

--- a/misc.html
+++ b/misc.html
@@ -40,7 +40,7 @@
                     <p><i> Teachings from the enlightened</i></p>
                 </div>
             </div>
-            <div class = "buttonBox2" onclick = "location.href = 'null.html'">
+            <div class = "buttonBox2" onclick = "location.href = 'Archives/books.html'">
                 <img class = "buttonImage" src = "src/chimp.jpg">
                 <div class = "boxLeft"> <b>Books</b> </div>
                 <div class = "boxUnder">
@@ -63,14 +63,14 @@
                     <p><i> Humanity's greatest compositions</i></p>
                 </div>
             </div>
-            <div class = "buttonBox2" onclick = "location.href = 'null.html'">
+            <div class = "buttonBox2" onclick = "location.href = 'Archives/anime.html'">
                 <img class = "buttonImage" src = "src/Anime.jpg">
                 <div class = "boxLeft"> <b> Anime </b> </div>
                 <div class = "boxUnder">
                     <p><i> Omnia mutantur, nihil interit</i></p>
                 </div>
             </div>
-            <div class = "buttonBox3" onclick = "location.href = 'null.html'">
+            <div class = "buttonBox3" onclick = "location.href = 'Archives/games.html'">
                 <img class = "buttonImage" src = "src/goodog.jpg">
                 <div class = "boxLeft"> <b> Games </b> </div>
                 <div class = "boxUnder">
