--- a/projects.html
+++ b/projects.html
@@ -40,24 +40,18 @@
                         <div class = "project">
                             <a href = "projects/RPS/rps.html"> Rock Paper Scissors </a>
                             <div class = "project_details">
-                                Written 21/05/2020 <br>
-                                First practice with JavaScript <br>
-                                Still looks a little janky. <br>
-
+                                21/05/2020 <br>
                             </div>
                         </div>
                         <div class = "project">
                             <a href = "projects/Snake/snake.html"> Snake game </a> 
                             <div class = "project_details">
                                 Written 21/05/2020 <br>
-                                Second practice with JaveScript <br> 
-                                First time using animated movement in JS <br>
-                                Game isn't wrapped in a main div intentionally for the snake on background effect<br>
                             </div>
                         </div>
                     </div>
                     <br><br>
-                    <u> Other projects are on Github </u>
+                    <u> Non web-based projects are on Github </u>
                 </div>
             </div>
             
