--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div>
             
         <div class = "MainInfo">
-            <div id = "Name"><h1> Sean Morota Chu</h1> </div>  
+            <div id = "Name"><h1> Sean Morota Chuu</h1> </div>  
             <div id = "Occupation"><h2> UNSW Finance and Software Engineering student </h2></div> 
             <audio controls autoplay loop ">
                 <source src="src/Chinggis.mp3" type="audio/mpeg">
